assets/themes/min-ting/css/style.css
/* ... */
.the-header .logo a:visited {
	color: #2d2d2d;
}
.the-header .nav-global {
	text-transform: uppercase;
}
.the-header .nav-global .forkme {
	position: relative;
	top: 2px;
}
/* MAIN
--------------------------------------------------------------------------------- */
.bd {
	min-height: 400px;
}
.unit-article header {
	background: url('/assets/themes/min-ting/skin/100-90-5-monochrome.png');
	background-repeat: repeat;
	background-position: 0 0;
	background-color: #004563;
	height: 50px;
	margin-bottom: 1.625em;
	padding-top: 1.625em;
	padding-bottom: 1.625em;
}
.unit-article header h1 {
	color: #fff;
	margin-top: 0;
	margin-bottom: 0;
}
.unit-article .entry-content h2,
.unit-article .entry-content h3,
.unit-article .entry-content h4,
.unit-article .entry-content h5,
.unit-article .entry-content h6 {
	color: #2d2d2d;
}
.unit-article .entry-content h2 a:link,
.unit-article .entry-content h3 a:link,
.unit-article .entry-content h4 a:link,
.unit-article .entry-content h5 a:link,
.unit-article .entry-content h6 a:link {
	color: #2d2d2d;
	border: 0;
}
.unit-article .entry-content h2 a:visited,
.unit-article .entry-content h3 a:visited,
.unit-article .entry-content h4 a:visited,
.unit-article .entry-content h5 a:visited,
.unit-article .entry-content h6 a:visited {
	color: #141414;
	border: 0;
}
.unit-article .entry-content h2 a:hover,
.unit-article .entry-content h3 a:hover,
.unit-article .entry-content h4 a:hover,
.unit-article .entry-content h5 a:hover,
.unit-article .entry-content h6 a:hover {
	color: #474747;
	border: 0;
}
.unit-article .entry-content:first-child h2,
.unit-article .entry-content:first-child h3,
.unit-article .entry-content:first-child h4,
.unit-article .entry-content:first-child h5,
.unit-article .entry-content:first-child h6 {
	margin-top: 0;
}
.unit-article a:link {
	border-bottom: 1px dotted #99cc99;
}
.unit-article a:visited {
	border-bottom: 1px dotted #77bb77;
}
.unit-article a:hover {
	border-bottom: 1px dotted #bbddbb;
}
.unit-article blockquote {
	border-left: 1em solid rgba(21, 25, 25, 0.8);
	padding-left: 1em;
}
.unit-article blockquote p {
	margin-left: 0;
	margin-right: 0;
}
.unit-article ul, .unit-article ol, .unit-article dl {
	padding-left: 0;
}
.unit-article ul {
	list-style: square;
}
.unit-article ol {
	list-style: decimal;
}
.unit-article li h1,
.unit-article dt h1,
.unit-article dd h1,
.unit-article li h2,
.unit-article dt h2,
.unit-article dd h2,
.unit-article li h3,
.unit-article dt h3,
.unit-article dd h3,
.unit-article li h4,
.unit-article dt h4,
.unit-article dd h4,
.unit-article li h5,
.unit-article dt h5,
.unit-article dd h5,
.unit-article li p,
.unit-article dt p,
.unit-article dd p,
.unit-article li ul,
.unit-article dt ul,
.unit-article dd ul,
.unit-article li ol,
.unit-article dt ol,
.unit-article dd ol,
.unit-article li dl,
.unit-article dt dl,
.unit-article dd dl,
.unit-article li blockquote,
.unit-article dt blockquote,
.unit-article dd blockquote,
.unit-article li .hasGrid,
.unit-article dt .hasGrid,
.unit-article dd .hasGrid {
	margin-left: 0;
	margin-right: 0;
}
.unit-article p code, .unit-article li code {
	margin: 0 2px;
	padding: 2px 5px;
	white-space: nowrap;
	border: 1px solid #CCC;
	background-color: #F8F8F8;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	-moz-background-clip: padding;
	-webkit-background-clip: padding-box;
	background-clip: padding-box;
}
.unit-article img {
	display: block;
	margin-left: auto;
	margin-left: auto;
}
.unit-article img.left {
	margin-right: 16px;
}
.unit-article img.right {
	margin-left: 16px;
}
.unit-article .date-publish {
	margin-bottom: 0;
}
.unit-article .list-linear .list-head {
	margin-right: 4px;
}
.unit-article .list-category a, .unit-article .list-tag a {
	border: 0 none;
}
.unit-article .list-category a:hover span, .unit-article .list-tag a:hover span {
	background-color: #f99157;
}
.unit-article .list-category span, .unit-article .list-tag span {
	background-color: #e25608;
	padding: 1px 5px;
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	border-radius: 10px;
	color: white;
	text-transform: uppercase;
	margin: 0 6px 0 0;
	display: inline-block;
	position: relative;
	vertical-align: middle;
	top: -2px;
	font-weight: bold;
	font-size: 10px;
}
.unit-article .list-category {
	margin-bottom: 0;
	text-transform: lowercase;
}
.unit-article .list-tag {
	text-transform: lowercase;
}
.unit-article .unit-foot {
	background: url('/assets/themes/min-ting/skin/100-90-5-monochrome.png') repeat 0 0 #004563;
	color: #fafafa;
	padding-top: 1.625em;
	padding-bottom: 1.625em;
	position: relative;
}
.unit-article .unit-foot a:link {
	color: #fafafa;
}
.unit-article .unit-foot a:visited {
	color: #fafafa;
}
.unit-article .unit-foot a:hover {
	color: #ffffff;
}
.unit-article .unit-foot nav ul {
	list-style: none;
}
.unit-article .unit-foot nav ul li {
	display: inline;
}
.unit-article .unit-foot .gotop {
	margin-bottom: 0;
}
/* post & page */
.layout-page .tag_box {
	background: url('/assets/themes/min-ting/skin/100-90-5-monochrome.png') repeat 0 0 #999999;
	padding: 0.8125em;
	list-style: none;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	-moz-background-clip: padding;
	-webkit-background-clip: padding-box;
	background-clip: padding-box;
	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(255, 255, 255, 0.4);
	-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(255, 255, 255, 0.4);
	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.4), 0 1px 0 rgba(255, 255, 255, 0.4);
}
.layout-page .tag_box li {
	display: inline;
	line-height: normal;
	vertical-align: middle;
}
/* ... */

